--- a/src/components/alg/alg-conspect/sp/pages/elem-sp15.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp15.html
@@ -42,6 +42,79 @@
   <div class="anchor" id="p1"></div>
   <h3>Базовые алгоритмы #5. Вещественный бинарный поиск</h3>
 
+  <h4>Вывод вещественных чисел</h4>
+  <p>Иногда в задачах требуют выводить вещественные числа, и утверждают, что требуют точность 4 знака, 6 знаков и более после запятой.</p>
+  <p>Это означает, что тестирующая система проверит ваш ответ с ответом членов жюри по некоторой точности, а именно:</p>
+  <code>|answer_jury - answer_your| &lt; eps</code>
+  <p>где eps это точность ответа. Например 0.0001.</p>
+  <p>Новая библиотека:</p>
+  <code>#include &lt;iomanip&gt;</code>
+  <p>Пример:</p>
+  <code>double a = 0.765765765765765;</code>
+  <code>cout &lt;&lt; a &lt;&lt; "\n"; // 0.765766</code>
+  <code>cout &lt;&lt; fixed &lt;&lt; setprecision(8) &lt;&lt; a &lt;&lt; "\n"; // 0.76576577</code>
+  <p>Если в задаче требуют вывести n знака после запятой, всегда выводите больше знаков, чтобы улучшить ответ.</p>
+
+  <h4>Вещественный бинарный поиск</h4>
+  <p>Рассмотрим задачу, нахождения корня у функции f(x) = 0. Пусть известно, что функция непрерывна, но искать ответ по-честному тяжело. Пусть известно, что при значении left и right функция f(x) принимает разные знаки. Тогда мы можем прибегнуть к вещественному бинарному поиску.</p>
+<pre>
+double left = 0;
+double right = 1e6;
+double mid, eps = 0.000001;
+while (right - left > eps) {
+  mid = (left + right) / 2;
+  if (f(mid)) {
+    left = mid;
+  } else {
+    rightn = mid;
+  }
+}
+cout &lt;&lt; fixed &lt;&lt; setprecision(8) &lt;&lt; left;
+</pre>
+  <p>В качестве ответа можно вывести любое число в диапазоне от left до right. Поскольку ответ проверяется с некоторой точностью, мы можем добиться того, чтобы весь диапазон был близок к результату членов жюри. Если от вас требуют точность ответа 4 знака после запятой, переменную eps можно сделать с запасом меньше 10⁻⁶.</p>
+  <p>Варианты ответов:</p>
+  <code>left</code>
+  <code>right</code>
+  <code>(left+right)/2</code>
+
+  <h4>Тернарный поиск</h4>
+  <p>Рассмотрим задачу нахождения минимума у функции на отрезке от left до right. В качестве примера возьмем функцию f1(x) = x² - 5x. Определить сразу при каком значении x будет минимальное значение трудно. Бывает, что функция имеет очень сложный вид.</p>
+  <p>Для решения задачи прибегнем к алгоритму тернарный поиск. Алгоритм схож с бинарным поиском, однако вместо нахождения середины отрезка и отсечения половины, мы будем искать трети отрезка и отсечения одного из трех подотрезков.</p>
+  <code>mid_left = left + (right - left)/3,</code>
+  <code>mid_right = left + (right - left)/3 ∗ 2.</code>
+  <p>На каждой итерации мы будем удалять треть отрезка, где ответа нет.</p>
+<pre>
+double left = 0;
+double right = 1e6;
+double mid_left, mid_right, eps = 0.000001;
+while (right - left > eps) {
+  mid_left = left + (right - left) / 3;
+  mid_right = left + (right - left) / 3 * 2;
+  if (f1(mid_left) > f1(mid_right)) {
+    left = mid_left;
+  } else {
+    right = mid_right;
+  }
+}
+cout &lt;&lt; fixed &lt;&lt; setprecission(8) &lt;&lt; left;
+</pre>
+  <p>Так же справедливо, что любое число в диапазоне от left до right является ответом на задачу.</p>
+  <p>Вещественный бинарный поиск по ответу применяется, если:</p>
+  <ol>
+    <li>Ответ на задачу можно найти математически, но формулу необходимо долго и трудно выводить.</li>
+    <li>Мы можем построить булевскую специальную функцию.</li>
+    <li>Ответ на задачу будет находится в месте перехода.</li>
+  </ol>
+  <p>Последовательность действий алгоритма</p>
+  <ol>
+    <li>Определяем булевскую функцию, как именно она выглядит (примерный график);</li>
+    <li>Определяем границы области поиска, таким образом, чтобы в f(left) f(right) значения булевской функции были разные;</li>
+    <li>Находим середину области поиска;</li>
+    <li>Определяем значение булевской функции от значения mid.</li>
+    <li>В зависимости от результата сдвигаем, либо левую границу области поиска в середину, либо правую границу области поиска в середину;</li>
+    <li>Продолжаем выполнять движение границ области поиска до тех пор, пока границы не станут близки по значению right - left > eps;</li>
+    <li>Делаем дополнительную проверку элементов после окончания цикла while. Ответ на задачу находится в одной из границ.</li>
+  </ol>
 </article>
 
 
@@ -150,6 +223,50 @@
   <h4>Пример 2</h4>
   <code>-1 -6 -12 -7</code>
   <code>-1</code>
+
+  <details>
+    <summary>Решение</summary>
+    <p>График кубической функции f(x) это непрерывная линия с двумя перегибами и может иметь до трех корней (точек где функция равна нулю). В условии уравнение имеет ровно один корень, значит с одной стороны от корня функция больше нуля, а с другой стороны меньше нуля. Зададим границы для вещественного бинарного поиска left и right. Найдем середину mid. Если знак функции больше нуля то сдвигаем правую границу, иначе левую. Будем двигать границы до тех пор, пока разница между ними не будет достаточно мала, чтобы можно было вывести ответ на задачу.</p>
+    <p>При отрицательных a левая часть функции больше нуля, а правая - меньше. Если поделить обе части уравнения на a, то мы упростим выражение и гарантируем, что левая часть функции меньше нуля, а правая часть - больше.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;iomanip&gt;
+
+using namespace std;
+
+int main() {
+  // ускорение ввода-вывода
+  ios::sync_with_stdio(0);
+  cin.tie(0);
+
+  // ввод данных
+  double a, b, c, d;
+  cin >> a >> b >> c >> d;
+
+  // решение
+  // a ≠ 0. Упростим уравнение
+  b = b / a;
+  c = c / a;
+  d = d / a;
+  a = 1;
+  double left = -10000;
+  double right = 10000;
+  double eps = 1e-8;
+  double m; // медиана
+  while (right - left > eps) {
+    m = (left + right) / 2;
+    if (m * m * m + b * m * m + c * m + d &lt; 0) {
+      left = m;
+    } else {
+      right = m;
+    }
+  }
+
+  // вывод результата
+  cout &lt;&lt; fixed &lt;&lt; setprecision(8) &lt;&lt; left;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -225,6 +342,60 @@
 1 11
 </pre>
   <code>1.909090909</code>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Построим булевскую функцию. Сделать так что все батарейки будут иметь заряд 0 возможно. Сделать так что все батарейки будут иметь заряд 1000 невозможно. Это будут левая и правая границы бинарного поиска. Будем делать вещественный бинарный поиск по ответу. Проверим что в mid это количество энергии равное во всех батарейках. Тогда если у батарейки больше энергии чем в mid, то она должна отдать энергию. Если меньше  - то принять энергию. Если сумма отдаваемой энергии больше чем принимаемой, то сдвигаем правую границу влево. И наоборот.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;iomanip&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  // ускорение ввода-вывода
+  ios::sync_with_stdio(0);
+  cin.tie(0);
+
+  // ввод данных
+  long long n, k;
+  cin >> n >> k;
+  vector&lt;long long&gt; A(n);
+  for (int i = 0; i &lt; n; i++) {
+    cin >> A[i];
+  }
+
+  // решение
+  // зададим масштаб
+  long long mult = 1000000;
+  for (int i = 0; i &lt; n; i++) {
+    A[i] *= mult;
+  }
+  double left = 0, right = 1e9, mid, sum_p, sum_m;
+  while (right - left > 0.000001) {
+    mid = (left + right) / 2;
+    sum_p = 0;
+    sum_m = 0;
+    for (int i = 0; i &lt; n; i++) {
+      if (A[i] > mid) {
+        sum_p += A[i] - mid;
+      } else {
+        sum_m += mid - A[i];
+      }
+    }
+    if (sum_p - sum_p * k / 100 > sum_m) {
+      left = mid;
+    } else {
+      right = mid;
+    }
+  }
+
+  // вывод результата
+  cout &lt;&lt; fixed &lt;&lt; setprecision(8) &lt;&lt; left / mult;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -317,6 +488,63 @@
 </pre>
   <code>1.400000000000</code>
   <p>В первом примере все друзья могут встретиться в точке 5 через 2 секунды. Для этого первый друг должен идти все время со своей максимальной скоростью на юг, а второй и третий должны идти со своими максимальными скоростями на север.</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Бинарным поиском будем искать время, за которое все люди будут пересекаться в одной точке. Зафиксировав время, для каждого человека мы можем определить на сколько он может уйти влево и насколько он может уйти вправо. Будем смотреть что все получившиеся отрезки пересекаются хотя бы в одной точке.</p>
+    <p>Ищем самую правую точку из всех левых сдвигов. Ищем самую левую точку из всех правых сдвигов. Если левая точка больше или равна правой, то все отрезки пересекаются.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;iomanip&gt;
+#include &lt;vector&gt;
+#include &lt;algorithm&gt;
+
+using namespace std;
+
+int main() {
+  // ускорение ввода-вывода
+  ios::sync_with_stdio(0);
+  cin.tie(0);
+
+  // ввод данных
+  int n;
+  cin >> n;
+  vector&lt;long double&gt; A(n);
+  vector&lt;long double&gt; B(n);
+  for (int i = 0; i &lt; n; i++) {
+    cin >> A[i];
+  }
+  for (int i = 0; i &lt; n; i++) {
+    cin >> B[i];
+  }
+
+  // решение
+  long double time_l = 0;
+  long double time_r = 1e9;
+  long double time_mid;
+  while (time_r - time_l > 0.0000001) {
+    time_mid = (time_l + time_r) / 2;
+    long double tmp_left = 1e9;
+    long double tmp_right = -1e9;
+    for (int i = 0; i &lt; n; i++) {
+      tmp_left = min(tmp_left, A[i] + time_mid * B[i]);
+      tmp_right = max(tmp_right, A[i] - time_mid * B[i]);
+    }
+    if (tmp_left >= tmp_right) {
+      time_r = time_mid;
+    } else {
+      time_l = time_mid;
+    }
+  }
+
+  // вывод результата
+  // формат языка Си
+  printf("%.8lf", time_mid);
+  // формат языка C++
+  // cout &lt;&lt; fixed &lt;&lt; setprecision(8) &lt;&lt; time_mid;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -370,6 +598,82 @@
 </pre>
   <code>0.625</code>
   <p>В третьем примере оптимально построить заповедник радиуса 5/8 с центром в точке (1/2, 5/8).</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Чтобы прямая (река) и окружность (заповедник) имели ровно одну точку соприкосновения, прамая должна касаться окружности. Если радиус окружности равен 0, то точно невозможно построить окружность, в которую входят все домики. Если радиус окружности равен 2*10⁷, то окружность можно построить, только если все точки лежат с одной стороны от реки. Тернарным поиском будем искать точку, в которой находится центр заповедника.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;iomanip&gt;
+#include &lt;vector&gt;
+#include &lt;algorithm&gt;
+
+using namespace std;
+
+int main() {
+  // ускорение ввода-вывода
+  ios::sync_with_stdio(0);
+  cin.tie(0);
+
+  // ввод данных
+  int n, h1 = 0, h2 = 0;
+  cin >> n;;
+  vector&lt;pair&lt;long double, long double&gt; &gt; A(n);
+  for (int i = 0; i &lt; n; i++) {
+    cin >> A[i].first >> A[i].second;
+    if (A[i].second > 0) {
+      h1++;
+    } else {
+      h2++;
+    }
+  }
+
+  // решение
+  if (h1 != 0 && h2 != 0) {
+    cout &lt;&lt; -1;
+    return 0;
+  }
+  for (int i = 0; i &lt; n; i++) {
+    A[i].second = abs(A[i].second);
+  }
+  sort(A.begin(), A.end());
+  long double left_t, right_t, mid_t_left, mid_t_right;
+  left_t = A[0].first - 1;
+  right_t = A[n - 1].first + 1;
+  long double tmp = 0, res1, res2;
+
+  // тернарный поиск
+  while (right_t - left_t > 0.000001) {
+    mid_t_left = (right_t - left_t) / 3 + left_t;
+    mid_t_right = (right_t - left_t) / 3 * 2 + left_t;
+
+    tmp = 0;
+    for (int i = 0; i &lt; n; i++) {
+      tmp = max(tmp, ((A[i].first - mid_t_left) * (A[i].first - mid_t_left) +
+            A[i].second * A[i].second) / (2 * A[i].second));
+    }
+    res1 = tmp;
+
+    tmp = 0;
+    for (int i = 0; i &lt; n; i++) {
+      tmp = max(tmp, (
+        (A[i].first - mid_t_right) * (A[i].first - mid_t_right) +
+        A[i].second * A[i].second) / (2 * A[i].second)
+      );
+    }
+    res2 = tmp;
+    if (res1 > res2) {
+      left_t = mid_t_left;
+    } else {
+      right_t = mid_t_right;
+    }
+  }
+
+  // вывод результата
+  cout &lt;&lt; fixed &lt;&lt; setprecision(8) &lt;&lt; res2;
+}
+</pre>
+  </details>
 </article>
 
 
