--- a/src/components/alg/alg-conspect/sp/pages/elem-sp16.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp16.html
@@ -5,8 +5,8 @@
 
 
 <article class="article">
-  <h1>Занятие 16</h1>
-  <p>Конспект видео от 2024.12.21</p>
+  <h1>Занятие 16 Динамическое программирование #1. Основы</h1>
+  <p>Конспект видео от 2025.01.11</p>
   <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/574114" target="_blank">Codeforces Контест 574114</a></p>
 </article>
 
@@ -15,6 +15,9 @@
 <article class="article">
   <h2>Содержание</h2>
 
+  <p>
+    <a href="p1">Динамическое программирование #1. Основы</a>
+  </p>
   <p>
     <a href="#task1">Задача A. Сбор урожая</a>
     <br><a href="#task2">Задача B. Потерянное число</a>
