--- a/src/components/alg/alg-conspect/sp/pages/elem-sp4.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp4.html
@@ -1265,6 +1265,36 @@ int main() {
 </pre>
   <code>2</code>
   <p>Во втором тестовом примере дом одноэтажный, и на первом этаже есть три квартиры. Свет горит в самой левой квартире (в обоих окнах) и в средней квартире (в одном окне). В правой же квартире свет не горит.</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>К нам приходят два числа. n это число этажей, m это число квартир на этаже. В каждой квартире 2 соседних окна. Всего квартир в доме n * m. Мы можем принимать в цикле по два числа и проверять если одно из них равно 1 то в этой квартире горит свет и значит там не спят.</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // входные данные
+  int n, m;
+  cin >> n >> m;
+  int w = n * m; // количесвто квартир в доме
+  int res = 0, w1 = 0, w2 = 0;
+  for (int i = 1; i &lt;= w; i++) {
+    cin >> w1; // свет в 1 окне
+    cin >> w2; // свет в 2 окне
+
+    // решение
+    if (w1 || w2) {
+      res++;
+    }
+  }
+
+  // вывод результата
+  cout &lt;&lt; res;
+}
+</pre>
+  </details>
 </article>
 
 
