--- a/src/components/code/code-c/pages/elem-book3.html
+++ b/src/components/code/code-c/pages/elem-book3.html
@@ -63,6 +63,10 @@
   <p>
     <a href="#p14">14 Мобильность программ на языке Си (78)</a>
   </p>
+
+  <p>
+    <a href="#p15">Список литературы (92)</a>
+  </p>
 </article>
 
 
@@ -663,6 +667,309 @@ static void swap(register int i, register int j) {
 
   <h4>11.1 Выполнение команд языка shell</h4>
   <p>Подключить stdio.h</p>
-  <p>Выполнит команду языка shell</p>
+  <p>Выполнит команду языка shell, описанную как строка string</p>
+  <code>int system(char *string);</code>
+
+  <h4>11.2 Временные файлы</h4>
+  <p>Подключить stdio.h</p>
+  <p>Создать временное имя файла</p>
+  <code>char *tmpnam(char *s);</code>
+
+  <p>Создать временное имя файла, используя каталог dir и префикс pfx</p>
+  <code>char *tempnam(char *dir, char *pfx);</code>
+
+  <p>Создать уникальное имя по шаблону, записанному в строке template</p>
+  <code>char *mktemp(char *template)</code>
+
+  <p>Создать временный файл</p>
+  <code>FILE *tmpfile()</code>
+
+  <h4>11.3 Обработка строк</h4>
+  <p>Подключить string.h</p>
+  <p>Сцепить две строки</p>
+  <code>char *strcat(char *s1, char *s2)</code>
+
+  <p>Сцепить две строки, причем из второй строки копировать не более n символов</p>
+  <code>char *strncat(char *s1, char *s2, int n)</code>
+
+  <p>Сравнить две строки в лексикографическом порядке</p>
+  <code>int strcmp(char *s1, char *s2)</code>
+
+  <p>Сравнить первые n символов двух строк</p>
+  <code>int strncmp(char *s1, char *s2, int n)</code>
+
+  <p>Копировать строку s2 в строку s1</p>
+  <code>char *strcpy(char *s1, char *s2)</code>
+
+  <p>Копировать не более n символов строки s2</p>
+  <code>char *strncpy(char *s1, char *s2, int n)</code>
+
+  <p>Определить длину строки (число символов без завершающего нуля)</p>
+  <code>int strlen(char *s)</code>
+
+  <p>Найти в строке первое вхождение символа c</p>
+  <code>char *strchr(char *s, char c)</code>
+
+  <p>Найти в строке последнее вхождение символа c</p>
+  <code>char *strrchr(char *s, char c)</code>
+
+  <p>Найти в строке s1 любой символ из строки s2</p>
+  <code>char *strpbrk(char *s1, char *s2)</code>
+
+  <p>Определить длину отрезка строки s1, содержащего символы из строки s2</p>
+  <code>int strspn(char *s1, char *s2)</code>
+
+  <p>Определить длину отрезка строки s1, содержащего символы, не входящие в строку s2</p>
+  <code>int strcspn(char *s1, char *s2)</code>
+
+  <p>Выделить из строки s1 лексемы, разделенные любым символом из строки s2</p>
+  <code>char *strtok(char *s1, char *s2)</code>
+
+  <h4>11.4 Проверка символов</h4>
+  <p>Подключить ctype.h</p>
+
+  <p>Проверить букву</p>
+  <code>int isalpha(int c)</code>
+
+  <p>Проверить букву в верхнем регистре</p>
+  <code>int isupper(int c)</code>
+
+  <p>Проверить букву в нижнем регистре</p>
+  <code>int islower(int c)</code>
+
+  <p>Проверить цифру</p>
+  <code>int isdigit(int c)</code>
+
+  <p>Проверить шестнадцатеричную цифру (0-9,A-F)</p>
+  <code>int isxdigit(int c)</code>
+
+  <p>Проверить букву или цифру</p>
+  <code>int isalnum(int c)</code>
+
+  <p>Проверить пробельный символ (пробел, табуляция, конец строки)</p>
+  <code>int isspace(int c)</code>
+
+  <p>Проверить символ пунктуации</p>
+  <code>int ispunct(int c)</code>
+
+  <p>Проверить печатный символ (ASCCII от 040 пробел до 0176 тильда)</p>
+  <code>int isprint(int c)</code>
+
+  <p>Проверить графический символ. Это все печатные кроме пробела</p>
+  <code>int isgraph(int c)</code>
+
+  <p>Проверить управляющий символ (0-037) или символ удаления (0177)</p>
+  <code>int iscntrl(int c)</code>
+
+  <p>Проверить символ ASCCII (0 - 0200)</p>
+  <code>int isasccii(int c)</code>
+
+  <h4>11.5 Преобразование символов</h4>
+  <p>Подключить ctype.h</p>
+
+  <p>Преобразовать целое число в символ ASCCII</p>
+  <code>int toasccii(int c)</code>
+
+  <p>Преобразовать букву в нижний регистр</p>
+  <code>int tolower(int c)</code>
+
+  <p>Преобразовать букву в верхний регистр</p>
+  <code>int toupper(int c)</code>
+
+  <p>Преобразовать букву в нижний регистр. Быстрая и ограниченная функция</p>
+  <code>int _tolower(int c)</code>
+
+  <p>Преобразовать букву в верхний регистр. Быстрая и ограниченная функция</p>
+  <code>int _toupper(int c)</code>
+
+  <h4>11.6 Преобразование строки в число</h4>
+  <p>Преобразование строки в long</p>
+  <code>long strtol(char *str, char *ptr, int base)</code>
+
+  <p>Преобразование строки в long</p>
+  <code>long atol(char *str)</code>
+
+  <p>Преобразование строки в int</p>
+  <code>int atoi(char *str)</code>
+
+  <p>Преобразование строки в double</p>
+  <code>double atof(char *str)</code>
+
+  <p>Преобразование строки в double</p>
+  <code>double strtod(char *str, char *ptr)</code>
+
+  <h4>11.7 Доступ к аргументам</h4>
+  <p>Ввести строку, связанную с переменной оболочки</p>
+  <code>char *getenv(char *name)</code>
+
+  <p>Ввести следующий символ опций из списка аргументов</p>
+  <code>int getopt(int argc, char **argv, char *optstring)</code>
+
+  <h4>11.8 Распределение памяти</h4>
+  <p>Выделение памяти размером size байт</p>
+  <code>char *malloc(unsigned size)</code>
+
+  <p>Выделение памяти и записи в нее одних нулей</p>
+  <code>char *calloc(unsigned nelem, unsigned elsize)</code>
+
+  <p>Изменение размера памяти, выделенной функциями malloc() или calloc()</p>
+  <code>char *realloc(char *ptr, unsigned size)</code>
+
+  <p>Освобождение памяти, выделенной функциями malloc(), calloc(), realloc()</p>
+  <code>void free(char *ptr)</code>
+</article>
+
+
+<!-- 12 Форматированный вывод -->
+<article class="article">
+  <div class="anchor" id="p12"></div>
+  <h3>12 Форматированный вывод (70)</h3>
+  <p>Подключить stdio.h</p>
+
+  <p>Записать аргументы в стандартный вывод stdout в соответствии с форматной строкой format</p>
+  <code>int printf(char *format [,arg...])</code>
+
+  <p>Записать аргументы в поток stream в соответствии с форматной строкой format</p>
+  <code>int fprintf(FILE *stream, char *format [,arg...])</code>
+
+  <p>Записать аргументы в массив символов s в соответствии с форматной строкой format</p>
+  <code>int sprintf(char *s, char *format [,arg...])</code>
+
+  <h4>12.1 Спецификация преобразования</h4>
+  <code>%[выравнивание][ширина][флаги]символ</code>
+  <p>Выравнивание вправо: по умолчанию. Выравнивание влево: символ '-'. Ширина определяет минимальное число выводимых символов.</p>
+
+  <h4>12.2 Спецификация вывода символа</h4>
+  <code>%[-][ширина]c</code>
+
+  <h4>12.3 Спецификация вывода строки</h4>
+  <code>%[-][ширина][.точность]s</code>
+
+  <h4>12.4 Спецификация вывода целого числа со знаком</h4>
+  <code>%[-][+][ширина][l]d</code>
+  <p>Для отрицательных чисел автоматически выводится знак '-'. Для положительных чисел знак '+' выводится только в том случае если в спецификации задан '+', если в спецификации задан пробел, то в позиции знака выводится пробел. 'l' необходим для типа данных long.</p>
+
+  <h4>12.5 Спецификация вывода целого числа без знака</h4>
+  <code>%[-][#][ширина][l][uoxX]</code>
+
+  <h4>12.6 Спецификация вывода числа с плавающей точкой</h4>
+  <code>%[-][+][ширина][.точность][feEgG]</code>
+</article>
+
+
+<!-- 13 Форматированный ввод -->
+<article class="article">
+  <div class="anchor" id="p13"></div>
+  <h3>13 Форматированный ввод (74)</h3>
+  <p>Подключить stdio.h</p>
+
+  <p>Записать данные из стандартный ввода stdin в соответствии с форматной строкой format в переменные, заданные указателями pointer</p>
+  <code>int scanf(char *format [,pointer...])</code>
+
+  <p>Записать даные из потока stream в соответствии с форматной строкой format в переменные, заданные указателями pointer</p>
+  <code>int fscanf(FILE *stream, char *format [,pointer...])</code>
+
+  <p>Записать данные из массива символов s в соответствии с форматной строкой format в переменные, заданные указателями pointer</p>
+  <code>int sscanf(char *s, char *format [,poiner...])</code>
+
+  <h4>13.1 Спецификация преобразования</h4>
+  <code>%[*][ширина][флаги]символ</code>
+
+  <h4>13.2 Пустые символы</h4>
+  <p>Пустые символы во входном потоке рассматриваются как разделители полей</p>
+
+  <h4>13.3 Литеральные символы</h4>
+  <p>Литеральные символы в форматной строке (кроме пробела, табуляции и %) требуют, чтобы во входном потоке появились точно такие же символы</p>
+
+  <h4>13.4 Спецификация ввода символа</h4>
+  <code>%[*][ширина]с</code>
+  <p>Ширина определяет число символов, которые следует прочитать из входного потока и присвоить массиву символов. Если ширина не указана, то вводится один символ. Можно вводить пустые символы</p>
+
+  <h4>13.5 Спецификация ввода строки</h4>
+  <code>%[*][ширина]s</code>
+  <p>Ширина определяет максимальное число символов в строке. Строки разделяются пустыми символами. Ведущие пустые символы игнорируются.</p>
+
+  <h4>13.6 Спецификация ввода целого числа</h4>
+  <code>%[*][ширина][lh][duox]</code>
+  <p>По умолчанию входные данные определяются как int. 'l' определяет тип вводимых данных как long. 'h' определяет тип вводимых данных как short.</p>
+
+  <h4>13.7 Спецификация ввода числа с плавающей точкой</h4>
+  <code>%[*][ширина][l][feg]</code>
+  <p>По умолчанию входные данные определяются как float. 'l' определяет тип входных данных как double.</p>
+
+  <h4>13.8 Спецификация ввода по образцу</h4>
+  <code>&[*][ширина]образец</code>
+  <p>Образец определяет множество символов, из которых может состоять вводимая строка, и задается символами в квадратных скобках</p>
+</article>
+
+
+<!-- 14 Мобильность программ на языке Си -->
+<article class="article">
+  <div class="anchor" id="p14"></div>
+  <h3>14 Мобильность программ на языке Си (78)</h3>
+
+  <p>Мобильность программ это свойство, позволяющее выполнять программы на разных ЭВМ с разными операционными системами.</p>
+
+  <h4>14.1 Верификатор lint</h4>
+  <p>Программа lint проверяет типы и конструкции ухудшающие мобильность программ. Это хорошее средство для разработки, но оно не дает гарантий, что программа будет мобильной или устранены все ее недостатки.</p>
+
+  <h4>14.2 Зависимость от компилятора</h4>
+  <p>Не все детали в языке Си стандартизированы. Поэтому разные компиляторы могут по разному обрабатывать программы. Например, не описан порядок вычисления операндов. Значит возможные побочные эффекты при в реализациях языка.</p>
+
+  <h4>14.3 Зависимость от ЭВМ</h4>
+  <p><strong>Не полагайтесь на определенный размер машинного слова.</strong> Размер int может различаться на разных архитектурах процессора. Также не гарантируется, что размер int совпадает с размером машинного слова.</p>
+  <p><strong>Тщательно проверяйте операции сдвига.</strong> Максимальное число бит, которые могут быть сдвинуты вправо или влево, различно на разных ЭВМ. Если заданный в операции сдвиг превысит допустимый максимум, то результаты будут непредсказуемы.</p>
+  <p><strong>Перед сдвигом преобразуйте целые значения к типу unsigned.</strong> На одних машинах сдвиг выполняется <strong>логически</strong>, т.е. освобождающиеся разряды обнуляются. На других машинах сдвиг выполняется <strong>арифметически</strong>, т.е. освобождающиеся разряды заполняются значением знакового разряда. Однако в языке Си гарантируется, что значения типа unsigned сдвигаются <strong>логически</strong>.</p>
+  <p><strong>Используйте поименованные константы.</strong> Использование в программе числовых констант, когда смысл их неочевиден, является плохим стилем программирования. Числовые константы, определенные с помощью #define легко находить и модифицировать.</p>
+  <p><strong>Определяйте размер объекта операцией sizeof.</strong> Если для размера объекта использовать константы, это снизит мобильность программ.</p>
+  <p><strong>Не используйте несколько символов в одной символьной константе.</strong> Язык Си позволяет задать символьную константу, состоящую из нескольких символов. Однако порядок размещения символов в машинном слове различен на разных ЭВМ.</p>
+  <p><strong>Не полагайтесь на внутреннюю кодировку целых чисел.</strong> Целые числа кодируются в дополнительном коде, но на некоторых ЭВМ - в обратном коде. Например, сдвиг на 1 бит влево отрицательного числа (чтобы уменьшить его в два раза) не приведет к желаемому результату на ЭВМ с обратным двоичным кодом.</p>
+  <p><strong>Формат чисел с плавающей точкой различен на разных ЭВМ.</strong> Поэтому точность результатов может быть тоже разной.</p>
+  <p><strong>Не полагайтесь на определенный порядок и число байт в слове.</strong> Число байт и порядок их размещения различны на разных ЭВМ.</p>
+  <p><strong>Не полагайтесь на определенное число бит в байте.</strong> Поскольку число бит в байте у разных ЭВМ различно, то байт не всегда занимает 8 бит. Для определения числа бит в байте используйте константу из файла values.h</p>
+  <p><strong>Будьте осторожны с символами, имеющими знак</strong>. На некоторых ЭВМ символы представляются как целые числа со знаком char, на других - как целые числа без знака unsigned char. Используйте всегда unsigned char.</p>
+  <p><strong>Не комбинируйте разные поля бит.</strong> Поля бит можно сделать мобильными если не объединять разные поля. Максимальный размер поля бит зависит от размера машинного слова, и поля бит не могут пересекать границу слова.</p>
+  <p><strong>Используйте операцию преобразования типа для указателей.</strong> Можно преобразовать указатель в данное целого типа, имеющее достаточно большой размер, и при обратном преобразовании получить исходное значение указателя.</p>
+  <p><strong>Учитываейте выравнивание при изменении значения указателя.</strong> При преобразовании указателя из одного типа в другой может возникнуть ошибка адресации вследствие ограничений на выравнивание данных в машинной памяти. Используйте функцию malloc, возвращающую указатель на символ, выравненный в памяти.</p>
+  <p><strong>Следите за сравнением указателей, имеющих знак.</strong> Некоторые ЭВМ выполняют сравнение указателей с учетом знака, другие делают беззнаковые сравнения.</p>
+  <p><strong>Следите за переполнением значения указателей.</strong> Арифметические преобразования указателей могут привести к переполнению. Такие циклические преобразования значений могут возникнуть при адресации массива, расположенного в начале или в конце машинной памяти.</p>
+  <p><strong>Не полагайтесь на конкретную кодировку символов.</strong> Чтобы проверить, что символ c является строчной буквой не делайте так</p>
+  <code>if (c >= 'a' && c &lt;= 'z')</code>
+  <p>Воспользуйтесь библиотечной функцией</p>
+  <code>if (islower(c))</code>
+  <p>Библиотечная функция islower является машиннозависимой, поэтому правильно выполнится на любой машине.</p>
+  <p><strong>Не используйте программные трюки, зависящие от аппаратуры.</strong> Можно повысить эффективность выполнения программы за счет знания особенностей конкретной ЭВМ, но такая программа станет непереносимой на другую машину.</p>
+
+  <h4>14.4 Хорошо организованные программы</h4>
+  <p>Программа хорошо организована если ее легко читать, модифицировать, эксплуатировать и переносить на другие ЭВМ.</p>
+  <p>Все определения, связанные с операционно средой, помещайте в файл заголовка. Используйте файлы заголовка только для определения команд препроцессора и типов данных.</p>
+  <p>Для локализации команд, зависящих от ЭВМ, используйте функции, условную компиляцию и команду #define.</p>
+  <p>Функции, зависящие от конкретной ЭВМ, объедините в отдельный исходный файл. Если таких файлов несколько, то соберите их в отдельном каталоге.</p>
+  <p>Проверяйте число и тип аргументов, передаваемых функциям.</p>
+  <p>Используйте стандартные библиотечные функции. Не определяйте собственные системные вызовы, если без этого можно обойтись. Библиотечные функции повышают мобильность, изолируют программу от изменений в операционной системе.</p>
+  <p>Тщательно определяйте внешние имена. Определяйте все внешние переменные в отдельном исходном файле. Все остальные файлы программы должны ссылаться на эти определения с помощью описаний extern. Некоторые операционные системы преобразуют все строчные буквы в прописные.</p>
+  <p>Используйте описание typedef для локализации определения типов данных, зависящих от ЭВМ.</p>
+
+  <h4>Мобильность файлов данных</h4>
+  <p>Для переноса файлов, содержащих двоичные данные, используйте символьный ввод-вывод. Файлы двоичных данных не мобильны, поскольку разные ЭВМ используют разное внутреннее представление данных.</p>
+</article>
+
+
+<!-- Список литературы -->
+<article class="article">
+  <div class="anchor" id="p15"></div>
+  <h3>Список литературы (92)</h3>
+
+  <ol>
+    <li>1985 Банахан, Раттер - Введение в операционную систему UNIX. 344с</li>
+    <li>1986 Баури - Операционная система UNIX. 463с</li>
+    <li>1985 Готье - Руководство по операционной системе UNIX. 232с</li>
+    <li>1985 Иванов - Язык программирования Си: предварительное описание. Прикладная информатика. Вып. 1</li>
+    <li>1985 Беляков - Инструментальная мобильная операционная система ИНМОС. 231с</li>
+    <li>1985 Керниган, Ритчи - Язык программирования Си. Задачи по языку Си. 279с</li>
+    <li>1985 Кристиан - Введение в операционную систему UNIX. 318с</li>
+    <li>1986 Томас, Йейтс - Операционная система UNIX. Руководство для пользователей. 352с</li>
+    <li>1986 Хэнкок, Кригер - Введение в программирование на языке Си. 192с</li>
+  </ol>
 </article>
 
