--- a/src/components/code/code-c/pages/elem-stepik1.html
+++ b/src/components/code/code-c/pages/elem-stepik1.html
@@ -1,15 +1,7 @@
 <article class="article">
-  Конспект курса со stepika
   <h1>C для начинающих (теория и задачи)</h1>
-</article>
-
-
-<article class="article">
-  <h3>Ссылка на курс</h3>
-
+  <p>Конспект курса</p>
   <p><a href="https://stepik.org/course/57680">https://stepik.org/course/57680</a></p>
-  <p>3 часа в неделю</p>
-  <p>Читается на 1 курсе МФТИ.</p>
 </article>
 
 
