--- a/src/components/alg/alg-conspect/stepik/pages/elem-stepik-01.html
+++ b/src/components/alg/alg-conspect/stepik/pages/elem-stepik-01.html
@@ -1,17 +1,8 @@
 <article class="article">
   <h1>Основы C/C++ для спортивного программирования</h1>
-  Конспект курса
-</article>
-
-
-<article class="article">
-  <h3>Ссылка на курс</h3>
-
+  <p>Конспект курса</p>
   <p><a href="https://stepik.org/course/80538" target="_blank">https://stepik.org/course/80538</a></p>
-  <p>4 недели обучения, 2—5 часов в неделю</p>
-  <p>Бесплатный курс от МФТИ Центр развития ИТ-образования</p>
 </article>
-
 
 
 <!-- Содержание -->
